--- a/.gitignore
+++ b/.gitignore
@@ -130,10 +130,9 @@ venv.bak/
 *bin/*
 */include/*
 *.cfg
-*lib64*
 lib64/*
 /lib64*/*
-
+lib64/*
 # Spyder project settings
 .spyderproject
 .spyproject
